css/style.css
/* ... */
#about-us h6{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 21px;
    line-height: 30px;
    text-align: center;
    text-transform: uppercase;
    margin:0;
    color: #7B7581;
}
#about-us #text{
    width: 524px;
    height: 397px;   
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    line-height: 30px;
    text-align: justify;  
    color: #000000;
    z-index: 100;
    grid-row: 1/1;
    grid-column: 1/1;
    position: relative;
    bottom: 441px;
}
#about-us p:first-child{
    padding-top: 16px;
}
#about-us #people{
    z-index: 200;
    position: relative;
    left: 30px;
}
#about-us #head-span{
    margin:0px 33px 0px 64px;
}
#about-us p,#head-span{
    display: inline-block;
}
#about-us-header{
    grid-row: 1;
}
#about-us #images{
    display: grid;
    grid-row: 2;
    justify-items: center;
    align-items: flex-end;
    position: relative;
    bottom: -4px;
    height: 825px;
    overflow: hidden;
}
#about-us #elipse-1,#elipse-2,#elipse-3,#people{
grid-row: 1/1;
grid-column: 1/1;
}
#about-us #people img{
    width: 94vw;
    max-width: 1139px!important;
}
#about-us #elipse-1 img{
    width: 45vw;
    max-width: 864px!important;
}
#about-us #elipse-2 img{
    width: 35vw;
    max-width: 672px!important;
}
#about-us #elipse-3 img{
    width: 25vw;
    max-width: 480px!important;
}
#about-us #elipse-1{
    z-index: 20;
}
#about-us #elipse-2{
    z-index: 30;
}
#about-us #elipse-3{
    z-index: 40;
}
#about-us p,#about-us pre{
    margin: 0;
}
#what-we-offer{
    width: min-content;
    margin: 0 auto;
}
#what-we-offer h2{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 48px;
    line-height: 70px;
    margin-top: 37px;
    text-align: center;
    color: #272727;
    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 3px 0px 0px rgba(255, 33, 33, 0.15), -3px 0px 0px rgba(27, 100, 209, 0.16);
}
#what-we-offer h6{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 21px;
    line-height: 30px;
    text-align: center;
    text-transform: uppercase;
    margin: 0;
    color: #7B7581;
}
#what-we-offer #cards-1,#cards-2,#cards-3,#content{
    display: grid;
}
#what-we-offer .card{
    border: 1px solid #F4E7F3;
    box-sizing: border-box;
    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.12));
    border-radius: 3px;
    width: 377px;
    max-height: 484px;
    padding: 63px 42px;
    display: grid;
    justify-items: center;
    margin: 10px;
    background: white;
}
#what-we-offer .card h4,#what-we-offer #card-8 h4{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 21px;
    line-height: 30px;
    text-align: center;
    text-transform: uppercase;
    margin: 48px 0px 0px 0px;
    color: #555555;
}
#what-we-offer .card p,#what-we-offer #card-8 p{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    line-height: 26px;
    text-transform: uppercase;

    color: #555555;

}
#what-we-offer .avatar{
    width: 142px;
    height: 142px;
    background: #F4E7F3;
    border-radius: 50%;
    display: grid;
    justify-items: center;
    align-items: center;
}
#what-we-offer #cards-1{
    grid-column: 1;
}
#what-we-offer #cards-2{
    grid-column: 2;
    margin-top: 25px;
}
#what-we-offer #cards-3{
    grid-column: 3;
}
#what-we-offer .card-1{
    grid-row: 1;
}
#what-we-offer .card-2{
    grid-row: 2;
}
#what-we-offer .card-3{
    grid-row: 3;
}
#what-we-offer #card-8{
    border: 1px solid #F4E7F3;
    box-sizing: border-box;
    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.12));
    border-radius: 3px;
    width: 377px;
    max-height: 615px;
    padding: 63px 42px;
    display: grid;
    background: white;
    justify-items: center;
    margin: 10px 10px 75px 10px;
}
#what-we-offer #text-content{
    grid-column: 2;
}
#benefits-to-you{
    background: linear-gradient(252.83deg, rgba(249, 32, 32, 0.3328) 4.85%, rgba(43, 102, 255, 0.2964) 98.69%), #272727;
    background-blend-mode: color, normal;
}
#benefits-to-you h2{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 48px;
    line-height: 70px;
    margin-top: 37px;
    text-align: center;
    color: #FFFFFF;
    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 3px 0px 0px rgba(255, 33, 33, 0.15), -3px 0px 0px rgba(27, 100, 209, 0.16);
}
#benefits-to-you h6{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 21px;
    line-height: 30px;
    text-align: center;
    text-transform: uppercase;
    margin: 0px 0px 29px 0px;
    color: #7B7581; 
}
#benefits-to-you #text{
    width: 376px;
    height: 300px;
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    line-height: 30px;
    grid-row: 1;
    grid-column: 2;
    color: #FFFFFF;
}
#benefits-to-you #image{
    grid-row: 1;
    grid-column: 1;
}
#benefits-to-you #content{
    display: grid;
}
#our-projects h2{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 48px;
    line-height: 70px;
    margin-top: 37px;
    text-align: center;
    color: #272727;
    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 3px 0px 0px rgba(255, 33, 33, 0.15), -3px 0px 0px rgba(27, 100, 209, 0.16);
}
#our-projects h6{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 21px;
    line-height: 30px;
    text-align: center;
    margin: 0px 0px 29px 0px;
    text-transform: uppercase;
    color: #7B7581;
}
#our-projects .card{
    display: grid;
    background: #FFFFFF;
    border: 1px solid #F4E7F3;
    box-sizing: border-box;
    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.12);
    border-radius: 3px;
    width: 278px;
    height: 385px;
}
/* ... */

